# MyTorch

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  MyTensor.cpp  MyTensor.h  MyTorch.py  README.md  network.ipynb  setup.bat  setup.py  setup.sh  tensorTest.py
csrc/: MyTensor.cpp  MyTensor.h  MyTorch.cpp  OpenCLManager.cpp  Proxy.cpp  helpers.cpp  utils.cpp
csrc/include/: DeviceType.h  Dtype.h  MyTensor.h  OpenCLManager.h  Proxy.h  helpers.h  pybind_includes.h  utils.h
csrc/tests/: test_tensor.cc
